# steamscraper

./: .gitignore  Makefile  README.md  RECOMMENDATIONS.md  pyproject.toml  setup.py
steamscraper/: __init__.py  config.py  constants.py  main.py  steamscraper.py
steamscraper/steamapi/: __init__.py  scraper.py  steamguard.py  workshop_client.py
tests/: conftest.py  test_config.py  test_scraper.py  test_steamguard.py  test_steamscraper.py
