[tool.poetry]
name = "steamscraper"
version = "0.2.0"
description = "Extract all subscribed Steam Workshop mods for Ark Survival Evolved"
authors = ["Michael Hoffmann <michaelh@centaur.au>"]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.11"
bs4 = "*"
steam = "*"
tomli = "*"

[tool.poetry.scripts]
steamscraper = "steamscraper.main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
